Updated Digital Clock Project

--- a/07_Projects/03_DigitalClock/index.html
+++ b/07_Projects/03_DigitalClock/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1 class="center">Jarvish Dev | Projects</h1>
-  <h2 class="center">BMI Calculator</h2>
+  <h2 class="center">Digital Clock</h2>
 
   <div class="container">
     <h2>
