Projects > Stop Watch

--- a/07_Projects/07_StopWatch/index.html
+++ b/07_Projects/07_StopWatch/index.html
@@ -13,6 +13,7 @@
 
 		<div class="container">
 			<div class="timer">00:00:00</div>
+			<!-- ! Buttons  -->
 			<div class="buttons">
 				<button id="start">Start</button>
 				<button id="stop">Stop</button>
